Redesigned resource manager

--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="Math\Utilities.cpp" />
     <ClCompile Include="Resources\Model.cpp" />
+    <ClCompile Include="Resources\ModelFactory.cpp" />
     <ClCompile Include="Resources\ModelLoader.cpp" />
     <ClCompile Include="Resources\Resource.cpp" />
     <ClCompile Include="Resources\ResourceManager.cpp" />
@@ -99,6 +100,7 @@
     <ClInclude Include="Math\Utilities.hpp" />
     <ClInclude Include="Objects\Types.hpp" />
     <ClInclude Include="Resources\Model.hpp" />
+    <ClInclude Include="Resources\ModelFactory.hpp" />
     <ClInclude Include="Resources\ModelLoader.hpp" />
     <ClInclude Include="Resources\Resource.hpp" />
     <ClInclude Include="Resources\ResourceFactory.hpp" />
