--- a/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj.filters
+++ b/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj.filters
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="_Resources\TMP\Shader.shader" />
+    <None Include="_Resources\Models\Skull.qres" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TmpMain.cpp">
