--- a/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj.filters
+++ b/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj.filters
@@ -17,6 +17,7 @@
   <ItemGroup>
     <None Include="_Resources\TMP\Shader.shader" />
     <None Include="_Resources\Models\Skull.qres" />
+    <None Include="_Resources\Meshes\Skull.qres" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TmpMain.cpp">
