--- a/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj
+++ b/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj
@@ -73,21 +73,25 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
+    <UseMultiToolTask>true</UseMultiToolTask>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
+    <UseMultiToolTask>true</UseMultiToolTask>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
+    <UseMultiToolTask>true</UseMultiToolTask>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(ProjectDir)_Build\bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)_Build\obj\$(Platform)\$(Configuration)\</IntDir>
+    <UseMultiToolTask>true</UseMultiToolTask>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
