--- a/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraMoveClass.cs" />
+    <Compile Include="Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotateTest.cs" />
   </ItemGroup>
