--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -65,6 +65,7 @@
     <ClCompile Include="Resources\Model.cpp" />
     <ClCompile Include="Resources\ModelFactory.cpp" />
     <ClCompile Include="Resources\MeshFactory.cpp" />
+    <ClCompile Include="Scripting\API_Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Framebuffer.hpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="Resources\ModelFactory.hpp" />
     <ClInclude Include="Resources\MeshFactory.hpp" />
     <ClInclude Include="Utilities\PointerWrapper.hpp" />
+    <ClInclude Include="Scripting\API_Camera.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Math\Vector2.inl" />
