--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -3,7 +3,6 @@
   <ItemGroup>
     <ClCompile Include="Graphics\Framebuffer.cpp" />
     <ClCompile Include="Graphics\PostprocessingExceptions.cpp" />
-    <ClCompile Include="Graphics\RendererConfiguration.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="Scripting\API_Application.cpp" />
     <ClCompile Include="Scripting\API_Input.cpp" />
@@ -12,10 +11,6 @@
     <ClCompile Include="Graphics\Shader.cpp" />
     <ClCompile Include="Graphics\ShaderPart.cpp" />
     <ClCompile Include="Graphics\UniformLocation.cpp" />
-    <ClCompile Include="Math\Matrix3.cpp" />
-    <ClCompile Include="Math\Matrix4.cpp" />
-    <ClCompile Include="Math\Quaternion.cpp" />
-    <ClCompile Include="Math\Vector4.cpp" />
     <ClCompile Include="Graphics\Mesh.cpp" />
     <ClCompile Include="Scripting\API_Component.cpp" />
     <ClCompile Include="Scripting\API_Entity.cpp" />
@@ -33,7 +28,6 @@
     <ClCompile Include="Libraries\TinyXML\tinyxml2.cpp" />
     <ClCompile Include="Serialization\XMLFormatter.cpp" />
     <ClCompile Include="TimeCounter.cpp" />
-    <ClCompile Include="Utilities\Nullable.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="Graphics\RenderingUnit.cpp" />
     <ClCompile Include="Graphics\ShaderPass.cpp" />
@@ -46,7 +40,6 @@
     <ClCompile Include="Objects\Scene.cpp" />
     <ClCompile Include="Objects\Script.cpp" />
     <ClCompile Include="Objects\Transform.cpp" />
-    <ClCompile Include="Math\Utilities.cpp" />
     <ClCompile Include="Objects\Renderable.cpp" />
     <ClCompile Include="Graphics\ShaderProperties.cpp" />
     <ClCompile Include="Graphics\ShaderPreprocessor.cpp" />
@@ -59,17 +52,17 @@
     <ClCompile Include="Resources\Resource.cpp" />
     <ClCompile Include="Scripting\API_Resource.cpp" />
     <ClCompile Include="Scripting\API_ResourceManager.cpp" />
-    <ClCompile Include="Utilities\Emiter.cpp" />
     <ClCompile Include="Resources\TextureFactory.cpp" />
     <ClCompile Include="Scripting\API_ShaderProperties.cpp" />
     <ClCompile Include="Resources\Model.cpp" />
     <ClCompile Include="Resources\ModelFactory.cpp" />
     <ClCompile Include="Resources\MeshFactory.cpp" />
+    <ClCompile Include="Graphics\Configuration\RendererConfiguration.cpp" />
+    <ClCompile Include="RendererIntermediateConfiguration.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Framebuffer.hpp" />
     <ClInclude Include="Graphics\PostprocessingExceptions.hpp" />
-    <ClInclude Include="Graphics\RendererConfiguration.hpp" />
     <ClInclude Include="InputController.hpp" />
     <ClInclude Include="Scripting\API_Application.hpp" />
     <ClInclude Include="Scripting\API_Input.hpp" />
@@ -89,14 +82,6 @@
     <ClInclude Include="Libraries\TinyXML\tinyxml2.h" />
     <ClInclude Include="Serialization\XMLFormatter.hpp" />
     <ClInclude Include="TimeCounter.hpp" />
-    <ClInclude Include="Utilities\Event.hpp" />
-    <ClInclude Include="Utilities\Immovable.hpp" />
-    <ClInclude Include="Math\Matrix3.hpp" />
-    <ClInclude Include="Math\Matrix4.hpp" />
-    <ClInclude Include="Math\Quaternion.hpp" />
-    <ClInclude Include="Math\Vector2.hpp" />
-    <ClInclude Include="Math\Vector3.hpp" />
-    <ClInclude Include="Math\Vector4.hpp" />
     <ClInclude Include="Graphics\Mesh.hpp" />
     <ClInclude Include="Scripting\API_Component.hpp" />
     <ClInclude Include="Scripting\API_Entity.hpp" />
@@ -106,18 +91,13 @@
     <ClInclude Include="Scripting\API_Scene.hpp" />
     <ClInclude Include="Scripting\API_Transform.hpp" />
     <ClInclude Include="Scripting\ScriptEngine.hpp" />
-    <ClInclude Include="Utilities\Property.hpp" />
     <ClInclude Include="Vertex.hpp" />
-    <ClInclude Include="Utilities\Nullable.hpp" />
-    <ClInclude Include="Utilities\StringHelpers.hpp" />
     <ClInclude Include="Window.hpp" />
-    <ClInclude Include="Utilities\ResourcesIDs.hpp" />
     <ClInclude Include="Graphics\RenderingUnit.hpp" />
     <ClInclude Include="Graphics\ShaderPass.hpp" />
     <ClInclude Include="Graphics\Renderer.hpp" />
     <ClInclude Include="Resources\ModelLoader.hpp" />
     <ClInclude Include="Resources\Model.hpp" />
-    <ClInclude Include="Math\Types.hpp" />
     <ClInclude Include="Scripting\ScriptingExceptions.hpp" />
     <ClInclude Include="Objects\Camera.hpp" />
     <ClInclude Include="Objects\Component.hpp" />
@@ -130,14 +110,11 @@
     <ClInclude Include="Objects\Types.hpp" />
     <ClInclude Include="Scripting\Types.hpp" />
     <ClInclude Include="Serialization\Types.hpp" />
-    <ClInclude Include="Math\Utilities.hpp" />
     <ClInclude Include="Graphics\Types.hpp" />
     <ClInclude Include="Objects\Renderable.hpp" />
-    <ClInclude Include="Utilities\Metaprogramming.hpp" />
     <ClInclude Include="Graphics\ShaderProperty.hpp" />
     <ClInclude Include="Graphics\ShaderUniformData.hpp" />
     <ClInclude Include="Graphics\ShaderProperties.hpp" />
-    <ClInclude Include="Utilities\ObjectDestructor.hpp" />
     <ClInclude Include="Graphics\ShaderPreprocessor.hpp" />
     <ClInclude Include="Scripting\ScriptEngineException.hpp" />
     <ClInclude Include="Resources\Types.hpp" />
@@ -149,24 +126,22 @@
     <ClInclude Include="Scripting\API_Renderable.hpp" />
     <ClInclude Include="Scripting\API_Resource.hpp" />
     <ClInclude Include="Scripting\API_ResourceManager.hpp" />
-    <ClInclude Include="Utilities\Emiter.hpp" />
     <ClInclude Include="Resources\TextureFactory.hpp" />
     <ClInclude Include="Scripting\API_ShaderProperties.hpp" />
-    <ClInclude Include="Utilities\EnumHelpers.hpp" />
     <ClInclude Include="Resources\ModelFactory.hpp" />
     <ClInclude Include="Resources\MeshFactory.hpp" />
-    <ClInclude Include="Utilities\PointerWrapper.hpp" />
+    <ClInclude Include="Graphics\Scene.hpp" />
+    <ClInclude Include="Graphics\Utils\ScreenDataProvider.hpp" />
+    <ClInclude Include="Graphics\Configuration\RendererConfiguration.hpp" />
+    <ClInclude Include="RendererIntermediateConfiguration.hpp" />
+    <ClInclude Include="Graphics\Camera.hpp" />
+    <ClInclude Include="Graphics\Renderable.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Math\Vector2.inl" />
-    <None Include="Math\Vector3.inl" />
-    <None Include="Math\Vector4.inl" />
     <None Include="Serialization\Deserializer.inl" />
     <None Include="Serialization\SerializationEngine.inl" />
     <None Include="Serialization\SerializationRules.inl" />
     <None Include="Serialization\Serializer.inl" />
-    <None Include="Utilities\Nullable.inl" />
-    <None Include="Utilities\StringHelpers.inl" />
     <None Include="Scripting\ScriptEngine.inl" />
     <None Include="Graphics\ShaderProperties.inl" />
   </ItemGroup>
