--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -25,7 +25,6 @@
     <ClCompile Include="Serialization\SerializationEngine.cpp" />
     <ClCompile Include="Serialization\SerializationRules.cpp" />
     <ClCompile Include="Serialization\Serializer.cpp" />
-    <ClCompile Include="Libraries\TinyXML\tinyxml2.cpp" />
     <ClCompile Include="Serialization\XMLFormatter.cpp" />
     <ClCompile Include="TimeCounter.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -43,7 +42,6 @@
     <ClCompile Include="Objects\Renderable.cpp" />
     <ClCompile Include="Graphics\ShaderProperties.cpp" />
     <ClCompile Include="Graphics\ShaderPreprocessor.cpp" />
-    <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="Graphics\Texture.cpp" />
     <ClCompile Include="Resources\ModelLoader.cpp" />
     <ClCompile Include="Resources\ShaderFactory.cpp" />
@@ -58,6 +56,7 @@
     <ClCompile Include="Resources\MeshFactory.cpp" />
     <ClCompile Include="Graphics\Configuration\RendererConfiguration.cpp" />
     <ClCompile Include="RendererIntermediateConfiguration.cpp" />
+    <ClCompile Include="Graphics\Vertex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Framebuffer.hpp" />
@@ -90,7 +89,6 @@
     <ClInclude Include="Scripting\API_Scene.hpp" />
     <ClInclude Include="Scripting\API_Transform.hpp" />
     <ClInclude Include="Scripting\ScriptEngine.hpp" />
-    <ClInclude Include="Vertex.hpp" />
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="Graphics\RenderingUnit.hpp" />
     <ClInclude Include="Graphics\ShaderPass.hpp" />
@@ -134,6 +132,7 @@
     <ClInclude Include="RendererIntermediateConfiguration.hpp" />
     <ClInclude Include="Graphics\Camera.hpp" />
     <ClInclude Include="Graphics\Renderable.hpp" />
+    <ClInclude Include="Graphics\Vertex.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Serialization\Deserializer.inl" />
