Initial shadows implementation
- shaders
- render changes
- light shadow maps

--- a/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj.filters
+++ b/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj.filters
@@ -125,6 +125,15 @@
     <ClInclude Include="Graphics\Vertex.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Graphics\Shadows\ShadowCaster.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Shadows\DirectionalShadowCaster.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Shadows\Light.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Graphics\ShaderProperties.inl">
