--- a/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj
+++ b/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj
@@ -191,6 +191,9 @@
     <ClInclude Include="Graphics\ShaderProperties.hpp" />
     <ClInclude Include="Graphics\ShaderProperty.hpp" />
     <ClInclude Include="Graphics\ShaderUniformData.hpp" />
+    <ClInclude Include="Graphics\Shadows\DirectionalShadowCaster.hpp" />
+    <ClInclude Include="Graphics\Shadows\Light.hpp" />
+    <ClInclude Include="Graphics\Shadows\ShadowCaster.hpp" />
     <ClInclude Include="Graphics\Texture.hpp" />
     <ClInclude Include="Graphics\Types.hpp" />
     <ClInclude Include="Graphics\UniformLocation.hpp" />
