--- a/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj.filters
+++ b/EngineQ/EngineQRenderer/EngineQRenderer.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Graphics\Vertex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics\Shadows\Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Configuration\RendererConfiguration.hpp">
